<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:strokeColor="@color/alto"
    app:strokeWidth="0.5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/repositories"
            android:src="@drawable/ic_repo_outline"
            app:layout_constraintBottom_toBottomOf="@+id/searchButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchButton"
            app:tint="@color/silver"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background= "@android:color/transparent"
            android:fontFamily="@font/manrope_medium"
            android:hint="@string/search_for"
            android:inputType="text"
            android:textSize="10sp"
            android:textColorHint="@color/silver"
            android:textColor="@color/shark"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/searchButton"
            app:layout_constraintEnd_toStartOf="@+id/searchButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/searchButton"
            tools:ignore="SmallSp,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/manrope_medium"
            android:paddingHorizontal="25dp"
            android:paddingVertical="9dp"
            android:text="@string/search"
            android:textAllCaps="false"
            app:backgroundTint="@color/shark"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>