<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_detail.UserDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_vector_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/users" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_detail_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/user_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/manrope_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/user_detail_image"
        app:layout_constraintTop_toTopOf="@+id/user_detail_image" />

    <TextView
        android:id="@+id/user_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="22dp" />

    <TextView
        android:id="@+id/user_detail_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/user_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_image" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/user_detail_bio"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_bio"
        android:contentDescription="@string/location" />

    <TextView
        android:id="@+id/user_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/cod_gray_55"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/link_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_link"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/user_detail_location"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        android:contentDescription="@string/user_blog" />

    <TextView
        android:id="@+id/user_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/manrope_medium"
        android:textColor="@color/cod_gray"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/link_image"
        app:layout_constraintStart_toEndOf="@+id/link_image"
        app:layout_constraintTop_toTopOf="@+id/link_image"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_followers"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        android:contentDescription="@string/followers" />

    <TextView
        android:id="@+id/user_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/cod_gray_55"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        tools:ignore="SmallSp,TextContrastCheck" />

    <TextView
        android:id="@+id/user_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/manrope_regular"
        android:textColor="@color/cod_gray_55"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_detail_followers"
        app:layout_constraintStart_toEndOf="@+id/user_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/user_detail_followers"
        tools:ignore="SmallSp,TextContrastCheck" />

    <include
        android:id="@+id/user_detail_repo_layout"
        layout="@layout/user_detail_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.01999998"
        android:visibility="gone"/>

    <include
        layout="@layout/search_empty_state"
        android:id="@+id/empty_search_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/user_repo_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>