<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="3dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:strokeColor="@color/alto"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/user_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />

            <TextView
                android:id="@+id/repo_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/ripe_plum"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/user_image"
                app:layout_constraintStart_toEndOf="@+id/user_image"
                app:layout_constraintTop_toTopOf="@+id/user_image" />

            <TextView
                android:id="@+id/repo_name"
                android:layout_width="0dp"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/manrope_medium"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/repo_username"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/repo_username"
                app:layout_constraintTop_toTopOf="@+id/repo_username" />

            <TextView
                android:id="@+id/repo_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/user_image"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/stack"
                app:layout_constraintBottom_toBottomOf="@+id/repo_language"
                app:layout_constraintEnd_toStartOf="@+id/repo_language"
                app:layout_constraintTop_toTopOf="@+id/repo_language"
                app:srcCompat="@drawable/ic_ellipse_120" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/stars"
                app:layout_constraintBottom_toBottomOf="@+id/repo_stars"
                app:layout_constraintEnd_toStartOf="@+id/repo_stars"
                app:layout_constraintTop_toTopOf="@+id/repo_stars"
                app:srcCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/repo_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/repo_language"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/repo_language"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/repo_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/user_image"
                app:layout_constraintTop_toBottomOf="@+id/user_image" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/lily_white"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/repo_description"
                app:layout_constraintTop_toBottomOf="@+id/repo_description"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/repo_tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/manrope_medium"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/steel_blue"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:cardBackgroundColor="@color/lily_white"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/materialCardView">

                <TextView
                    android:id="@+id/repo_tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/steel_blue"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/lily_white"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                app:layout_constraintTop_toTopOf="@+id/materialCardView2">

                <TextView
                    android:id="@+id/repo_tag3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/steel_blue"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/tags_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="materialCardView4, materialCardView, materialCardView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>